welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: not found: type N
  var T = Array [N](14)
                 ^